--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   server:
-    image: sdpequinor/release-aware-api:latest
+    image: sdpequinor/release-aware-api:1.7
     restart: unless-stopped
     command: /scripts/run-local-server.sh
     build:
@@ -57,13 +57,13 @@ services:
         eslint/eslint,
         webpack/webpack
   client:
-    image: sdpequinor/release-aware-web:latest
+    image: sdpequinor/release-aware-web:1.7
     restart: unless-stopped
     build:
       context:  ./client/
       dockerfile: Dockerfile
     ports:
-      - 80:3001
+      - 3001:3001
     volumes:
       - ./client/src:/code/src
     environment:
