--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        docker build . --file ./server/Dockerfile --tag sdpequinor/release-aware-api:latest
+        cd ./server
+        docker build . --file Dockerfile --tag sdpequinor/release-aware-api:latest
         echo ${{ secrets.DOCKERHUB_PAT }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
         docker push sdpequinor/release-aware-api:latest
         docker logout
