--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,14 @@
 FROM golang:1.12.5
 
-ENV GOPATH /go
-ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
-
 # install required debian packages
 # add any package that is required after `build-essential`, end the line with \
 RUN apt-get update && apt-get install -y \
     build-essential \
 && rm -rf /var/lib/apt/lists/*
 
-# install glide,  gin and delve
+# install glide and gin
 RUN go get github.com/Masterminds/glide
 RUN go get github.com/codegangsta/gin
-RUN go get github.com/go-delve/delve/cmd/dlv
 
 # setup the working directory
 WORKDIR /go/src/app
@@ -31,5 +27,5 @@ ADD src src
 # build the source
 RUN go build src/main.go
 
-# Expose 2345 for Delve debugger
-EXPOSE 2345
+# command to be executed on running the container
+CMD ["./main"]
