Helm chart aware for release-aware (#6)
* compose: Fix local debugging

* helm-checks: add outline

* helm-checks: fixes so that code compiles

* test to see if CI triggers

* Add github CI

* Add delve debugger

* Further fixes before the weekend..

* Working API

* revert dockerfile changes

* Integrate backend and frontend

* Combine helm charts and github releases to single view

Co-authored-by: Audun Solemdal <audunlsolemdal@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,14 +56,19 @@ services:
         facebook/jest,
         eslint/eslint,
         webpack/webpack
+      HELM_REPOS: |
+        gitlab/gitlab,
+        fluxcd/flux,
+        jetstack/cert-manager,
+        stable/oauth2-proxy
   client:
-    image: sdpequinor/release-aware-web:latest
+    image: sdpequinor/release-aware-web:1.7
     restart: unless-stopped
     build:
       context:  ./client/
       dockerfile: Dockerfile
     ports:
-      - 80:3001
+      - 3001:3001
     volumes:
       - ./client/src:/code/src
     environment:
