--- a/.github/workflows/web-docker-image.yml
+++ b/.github/workflows/web-docker-image.yml
@@ -1,19 +1,19 @@
-name: 'Release-aware server Docker image create & push'
+name: 'Release-aware web Docker image create & push'
 
 on:
   push:
     branches: [ master, helm-charts ]
     paths:
-    - 'server/*'
-    - '.github/workflows/*'
+    - 'client/*'
+    - '.github/workflows/web-docker-image.yml'
   pull_request:
     branches: [ master ]
     paths:
-    - 'server/*'
-    - '.github/workflows/*'
+    - 'client/*'
+    - '.github/workflows/web-docker-image.yml'
 jobs:
 
-  build-server-image:
+  build-and-push-web-image:
 
     runs-on: ubuntu-latest
 
@@ -21,8 +21,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        cd ./server
-        docker build . --file Dockerfile --tag sdpequinor/release-aware-api:latest
+        cd ./client
+        docker build . --file Dockerfile --tag sdpequinor/release-aware-web:latest
         echo ${{ secrets.DOCKERHUB_PAT }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-        docker push sdpequinor/release-aware-api:latest
+        docker push sdpequinor/release-aware-web:latest
         docker logout
