--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   server:
-    image: sdpequinor/release-aware-api:latest
+    image: sdpequinor/release-aware-api:1.8
     restart: unless-stopped
     command: /scripts/run-local-server.sh
     build:
@@ -62,7 +62,8 @@ services:
         jetstack/cert-manager,
         stable/oauth2-proxy
   client:
-    image: sdpequinor/release-aware-web:1.7
+    image: sdpequinor/release-aware-web:1.8
+    tty: true
     restart: unless-stopped
     build:
       context:  ./client/
