CI: Add manual trigger option

--- a/.github/workflows/web-docker-image.yml
+++ b/.github/workflows/web-docker-image.yml
@@ -1,6 +1,7 @@
 name: 'Release-aware web Docker image create & push'
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master, helm-charts ]
     paths:
