--- a/.github/workflows/api-docker-image.yml
+++ b/.github/workflows/api-docker-image.yml
@@ -1,6 +1,7 @@
 name: 'Release-aware server Docker image create & push'
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master, helm-charts ]
     paths:
