--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   server:
-    image: sdpequinor/release-aware-api:1.12.1
+    image: sdpequinor/release-aware-api:1.13.0
     restart: unless-stopped
     command: /scripts/run-local-server.sh
     build:
@@ -58,11 +58,10 @@ services:
         webpack/webpack
       HELM_REPOS: |
         gitlab/gitlab,
-        flux/flux,
-        jetstack/cert-manager,
-        stable/oauth2-proxy
+        cert-manager/cert-manager,
+        community-operators/flux
   client:
-    image: sdpequinor/release-aware-web:1.9.1
+    image: sdpequinor/release-aware-web:1.10.0
     tty: true
     restart: unless-stopped
     build:
